--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "body-parser": "^2.2.0",
+    "crypto": "^1.0.1",
     "express": "^5.1.0"
   },
   "devDependencies": {
