--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "crypto": "^1.0.1",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
