--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "mysql2": "^3.15.3",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
